--- a/php/php74-cli/Dockerfile
+++ b/php/php74-cli/Dockerfile
@@ -1,24 +1,16 @@
-FROM debian:buster-slim
+FROM debian:stretch-slim
 
-SHELL ["/bin/bash", "-c"]
-STOPSIGNAL SIGTERM
 ENV DEBIAN_FRONTEND noninteractive
-
-WORKDIR /app
-
-# System update
-RUN set -x && \
-    apt update -qq && \
-    apt -y dist-upgrade && \
-    apt install -y wget apt-transport-https apt-utils gnupg2
-
-RUN echo "deb https://packages.sury.org/php/ stretch main" > /etc/apt/sources.list.d/php.list && \
-    wget --quiet -O /etc/apt/trusted.gpg.d/php.gpg https://packages.sury.org/php/apt.gpg && \
-    echo "deb http://apt.postgresql.org/pub/repos/apt/ stretch-pgdg main" > /etc/apt/sources.list.d/pgdg.list && \
-    wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | apt-key add -
-
-RUN apt-get update \
-    && apt-get install -y \
+RUN set -x \
+    && apt update -qq \
+    && apt -y dist-upgrade \
+    && apt install -y wget apt-transport-https apt-utils gnupg2 \
+    && echo "deb https://packages.sury.org/php/ stretch main" > /etc/apt/sources.list.d/php.list \
+    && wget --quiet -O /etc/apt/trusted.gpg.d/php.gpg https://packages.sury.org/php/apt.gpg \
+    && echo "deb http://apt.postgresql.org/pub/repos/apt/ stretch-pgdg main" > /etc/apt/sources.list.d/pgdg.list \
+    && wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | apt-key add - \
+    && apt update \
+    && apt install -y \
         postgresql-client-12 \
         php7.4-curl \
         php7.4-cli \
@@ -34,3 +26,5 @@ RUN apt-get update \
         unzip \
     && apt clean \
     && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /usr/share/doc /usr/share/man
+
+WORKDIR /app
