--- a/php/php74-cli-test/Dockerfile
+++ b/php/php74-cli-test/Dockerfile
@@ -43,4 +43,31 @@ RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local
     && sed -i 's/^display_startup_errors = Off/display_startup_errors = On/g' /etc/php/7.4/cli/php.ini \
     && sed -i 's/^error_reporting = E_ALL & ~E_DEPRECATED & ~E_STRICT/error_reporting = E_ALL/g' /etc/php/7.4/cli/php.ini
 
+RUN apt-get update \
+     apt-get install -y \
+     apt-transport-https \
+     ca-certificates \
+     curl \
+     gnupg2 \
+     software-properties-common
+
+RUN curl -fsSL https://download.docker.com/linux/debian/gpg | apt-key add - \
+    && apt-key fingerprint 0EBFCD88 \
+    && add-apt-repository \
+   "deb [arch=amd64] https://download.docker.com/linux/debian \
+   $(lsb_release -cs) \
+   stable"
+
+# Update and install system base packages
+# don't allow the package to install its sysctl file (causes the install to fail)
+# Failed to write '262144' to '/proc/sys/vm/max_map_count': Read-only file system
+RUN apt-get update -qq; \
+    apt-get install -y \
+        docker-ce \
+    ; apt-get clean \
+    ; rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+
+RUN curl -L "https://github.com/docker/compose/releases/download/1.25.3/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose; \
+    chmod +x /usr/local/bin/docker-compose
+
 WORKDIR /app
