nginx /dev/df/1 to /dev/stdout

--- a/nginx/config/nginx.conf
+++ b/nginx/config/nginx.conf
@@ -1,7 +1,7 @@
 user  nginx;
 worker_processes  1;
 
-error_log  error_log /dev/fd/1 warn;
+error_log  error_log /dev/stdout warn;
 pid  /var/run/nginx.pid;
 
 events {
@@ -38,7 +38,7 @@ http {
                                     '"nginx_http_scheme": "$scheme", '
                                     '"nginx_access": true }';
 
-  access_log  /dev/fd/1 json_log;
+  access_log  /dev/stdout json_log;
   sendfile  on;
   #tcp_nopush  on;
   keepalive_timeout  65;
