nginx.conf update

--- a/nginx/config/nginx.conf
+++ b/nginx/config/nginx.conf
@@ -1,48 +1,112 @@
-user  nginx;
-worker_processes  1;
-
-error_log /dev/stdout warn;
-pid  /var/run/nginx.pid;
+user nginx;
+worker_processes 1;
+pid /run/nginx.pid;
 
 events {
-  worker_connections  1024;
+    use epoll;
+    worker_connections 1024;
 }
 
 http {
-  include /etc/nginx/mime.types;
-  default_type application/octet-stream;
-  log_format json_log escape=json '{ "nginx_timestamp": "$time_iso8601", '
-                                    '"nginx_server_name": "$server_name", '
-                                    '"nginx_host": "$host", '
-                                    '"nginx_remote_addr": "$remote_addr", '
-                                    '"nginx_realip_remote_addr": "$realip_remote_addr", '
-                                    '"nginx_remote_user": "$remote_user", '
-                                    '"nginx_request": "$request", '
-                                    '"nginx_request_uri": "$request_uri", '
-                                    '"nginx_response_status": $status, '
-                                    '"nginx_body_bytes_sent": $body_bytes_sent, '
-                                    '"nginx_request_time": $request_time, '
-                                    '"nginx_request_method": "$request_method", '
-                                    '"nginx_upstream_cache_status": "$upstream_cache_status", '
-                                    '"nginx_upstream_connect_time": "$upstream_connect_time", '
-                                    '"nginx_upstream_header_time": "$upstream_header_time", '
-                                    '"nginx_upstream_response_time": "$upstream_response_time", '
-                                    '"nginx_upstream_response_length": "$upstream_response_length", '
-                                    '"nginx_upstream_addr": "$upstream_addr", '
-                                    '"nginx_http_referrer": "$http_referer", '
-                                    '"nginx_http_user_agent": "$http_user_agent", '
-                                    '"nginx_http_x_forwarded_for": "$http_x_forwarded_for", '
-                                    '"nginx_http_x_header": "$http_x_header", '
-                                    '"nginx_http_cookie": "$http_cookie", '
-                                    '"nginx_http_version": "$server_protocol", '
-                                    '"nginx_http_scheme": "$scheme", '
-                                    '"nginx_access": true }';
+    #
+    # Basic Settings
+    ##
+    sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
+    keepalive_timeout 65;
 
-  access_log  /dev/stdout json_log;
-  sendfile  on;
-  #tcp_nopush  on;
-  keepalive_timeout  65;
-  #gzip  on;
-  include  /etc/nginx/conf.d/*.conf;
-  index  index.html;
+    types_hash_max_size 2048;
+    server_names_hash_bucket_size 512;
+    server_names_hash_max_size 4096;
+    server_tokens off;
+
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+
+    ##
+    # SSL Settings
+    ##
+    ssl_protocols TLSv1.2;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers "ECDH+AESGCM:DH+AESGCM:ECDH+AES256:DH+AES256:ECDH+AES128:DH+AES:!RC4:!aNULL:!eNULL:!LOW:!3DES:!MD5:!EXP:!PSK:!SRP:!DSS";
+    ssl_session_timeout 5m;
+    ssl_session_cache shared:SSL:5m;
+    ssl_session_tickets off;
+    ssl_stapling on;
+    ssl_stapling_verify on;
+    add_header Strict-Transport-Security "max-age=63072000; includeSubdomains";
+    add_header X-Content-Type-Options nosniff;
+
+    ##
+    # Logging Settings
+    ##
+    log_format json_log escape=json '{ "nginx_timestamp": "$time_iso8601", '
+             '"nginx_server_name": "$server_name", '
+             '"nginx_host": "$host", '
+             '"nginx_remote_addr": "$remote_addr", '
+             '"nginx_realip_remote_addr": "$realip_remote_addr", '
+             '"nginx_remote_user": "$remote_user", '
+             '"nginx_request": "$request", '
+             '"nginx_request_uri": "$request_uri", '
+             '"nginx_response_status": $status, '
+             '"nginx_body_bytes_sent": $body_bytes_sent, '
+             '"nginx_request_time": $request_time, '
+             '"nginx_request_method": "$request_method", '
+             '"nginx_upstream_cache_status": "$upstream_cache_status", '
+             '"nginx_upstream_connect_time": "$upstream_connect_time", '
+             '"nginx_upstream_header_time": "$upstream_header_time", '
+             '"nginx_upstream_response_time": "$upstream_response_time", '
+             '"nginx_upstream_response_length": "$upstream_response_length", '
+             '"nginx_upstream_addr": "$upstream_addr", '
+             '"nginx_http_referrer": "$http_referer", '
+             '"nginx_http_user_agent": "$http_user_agent", '
+             '"nginx_http_x_forwarded_for": "$http_x_forwarded_for", '
+             '"nginx_http_x_header": "$http_x_header", '
+             '"nginx_http_cookie": "$http_cookie", '
+             '"nginx_http_version": "$server_protocol", '
+             '"nginx_http_scheme": "$scheme", '
+             '"nginx_nginx_access": true }';
+
+    access_log /proc/1/fd/1 json_log;
+    error_log /proc/1/fd/2 warn;
+
+    ##
+    # Gzip Settings
+    ##
+    gzip on;
+    gzip_disable "msie6";
+    gzip_min_length 10240;
+    gzip_proxied expired no-cache no-store private auth;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+    gzip_comp_level 1;
+    gzip_http_version 1.1;
+    gzip_proxied any;
+
+    ##
+    # Proxy settings
+    ##
+    proxy_send_timeout   120s;
+    proxy_read_timeout   120s;
+    proxy_buffer_size    4k;
+    proxy_buffers     16 32k;
+    proxy_busy_buffers_size 64k;
+    proxy_temp_file_write_size 64k;
+    proxy_connect_timeout 120s;
+
+    map $http_x_forwarded_proto $thescheme {
+         default $scheme;
+         https https;
+    }
+
+    proxy_set_header   Host   $host;
+    proxy_set_header   X-Real-IP  $remote_addr;
+    proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header   X-Forwarded-Proto $thescheme;
+
+    client_max_body_size    10m;
+    client_body_buffer_size 128k;
+
+    include /etc/nginx/conf.d/*.conf;
+    include /etc/nginx/sites-enabled/*;
 }
