nginx.conf update

--- a/nginx/config/nginx.conf
+++ b/nginx/config/nginx.conf
@@ -66,7 +66,7 @@ http {
              '"nginx_http_cookie": "$http_cookie", '
              '"nginx_http_version": "$server_protocol", '
              '"nginx_http_scheme": "$scheme", '
-             '"nginx_nginx_access": true }';
+             '"nginx_access": true }';
 
     access_log /proc/1/fd/1 json_log;
     error_log /proc/1/fd/2 warn;
