--- a/php/php74-apache/Dockerfile
+++ b/php/php74-apache/Dockerfile
@@ -35,7 +35,8 @@ RUN set -x \
     && ln -sf /proc/1/fd/1 /var/log/apache2/access.log \
     && ln -sf /proc/1/fd/2 /var/log/apache2/error.log \
     && sed -ri -e 's!/var/www/html!${APACHE_DOCUMENT_ROOT}!g' /etc/apache2/sites-available/*.conf \
-    && sed -ri -e 's!/var/www/!${APACHE_DOCUMENT_ROOT}!g' /etc/apache2/apache2.conf /etc/apache2/conf-available/*.conf
+    && sed -ri -e 's!/var/www/!${APACHE_DOCUMENT_ROOT}!g' /etc/apache2/apache2.conf /etc/apache2/conf-available/*.conf \
+    && sed -i '/<Directory ${APACHE_DOCUMENT_ROOT}>/,/<\/Directory>/ s/AllowOverride None/AllowOverride All/' /etc/apache2/apache2.conf
 
 EXPOSE 80
 COPY docker-php-entrypoint /usr/local/bin/
