--- a/php/php74-cli-test/Dockerfile
+++ b/php/php74-cli-test/Dockerfile
@@ -14,6 +14,7 @@ RUN set -x \
         postgresql-client-12 \
         php7.4-curl \
         php7.4-cli \
+        php7.4-gd \
         php7.4-intl \
         php7.4-json \
         php7.4-pgsql \
