updated php7.1 docker files

--- a/php/php71-apache/Dockerfile
+++ b/php/php71-apache/Dockerfile
@@ -23,8 +23,8 @@ RUN set -x \
         php7.1-mbstring \
         php7.1-bcmath \
         php7.1-zip \
-        php-imagick \
-        php-redis \
+        php7.1-imagick \
+        php7.1-redis \
         php-pear \
         unzip \
         apache2 \
