--- a/php/php71-cli/Dockerfile
+++ b/php/php71-cli/Dockerfile
@@ -24,6 +24,7 @@ RUN set -x \
         php7.1-bcmath \
         php7.1-zip \
         php7.1-redis \
+        php7.1-imap \
         php-pear \
         unzip \
     && apt clean \
