increased memory limit for php7.1 apache2

--- a/php/php71-apache/Dockerfile
+++ b/php/php71-apache/Dockerfile
@@ -38,7 +38,9 @@ RUN set -x \
     && ln -sf /proc/1/fd/2 /var/log/apache2/error.log \
     && sed -ri -e 's!/var/www/html!${APACHE_DOCUMENT_ROOT}!g' /etc/apache2/sites-available/*.conf \
     && sed -ri -e 's!/var/www/!${APACHE_DOCUMENT_ROOT}!g' /etc/apache2/apache2.conf /etc/apache2/conf-available/*.conf \
-    && sed -i '/<Directory ${APACHE_DOCUMENT_ROOT}>/,/<\/Directory>/ s/AllowOverride None/AllowOverride All/' /etc/apache2/apache2.conf
+    && sed -i '/<Directory ${APACHE_DOCUMENT_ROOT}>/,/<\/Directory>/ s/AllowOverride None/AllowOverride All/' /etc/apache2/apache2.conf \
+    && sed -i 's/memory_limit = .*/memory_limit = 512M/' /etc/php/7.1/apache2/php.ini \
+    && sed -i 's/upload_max_filesize = .*/upload_max_filesize = 512M/' /etc/php/7.1/apache2/php.ini
 
 EXPOSE 80
 COPY docker-php-entrypoint /usr/local/bin/
