--- a/php/php74-apache/Dockerfile
+++ b/php/php74-apache/Dockerfile
@@ -37,7 +37,9 @@ RUN set -x \
     && ln -sf /proc/1/fd/2 /var/log/apache2/error.log \
     && sed -ri -e 's!/var/www/html!${APACHE_DOCUMENT_ROOT}!g' /etc/apache2/sites-available/*.conf \
     && sed -ri -e 's!/var/www/!${APACHE_DOCUMENT_ROOT}!g' /etc/apache2/apache2.conf /etc/apache2/conf-available/*.conf \
-    && sed -i '/<Directory ${APACHE_DOCUMENT_ROOT}>/,/<\/Directory>/ s/AllowOverride None/AllowOverride All/' /etc/apache2/apache2.conf
+    && sed -i '/<Directory ${APACHE_DOCUMENT_ROOT}>/,/<\/Directory>/ s/AllowOverride None/AllowOverride All/' /etc/apache2/apache2.conf \
+    && sed -i '/<IfModule mpm_prefork_module>/,/<\/IfModule>/{//!d}' /etc/apache2/mods-available/mpm_prefork.conf \
+    && sed -i '/<\/IfModule>/i\\tStartServers\t\t10\n\tMinSpareServers\t\t10\n\tMaxSpareServers\t\t100\n\tMaxRequestWorkers\t250\n\tMaxConnectionsPerChild\t16384' /etc/apache2/mods-available/mpm_prefork.conf
 
 EXPOSE 80
 COPY docker-php-entrypoint /usr/local/bin/
