--- a/php/php71-cli/Dockerfile
+++ b/php/php71-cli/Dockerfile
@@ -27,6 +27,7 @@ RUN set -x \
         php7.1-imap \
         php-pear \
         unzip \
+    && apt -y dist-upgrade \
     && apt clean \
     && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /usr/share/doc /usr/share/man
 
