--- a/php/php74-cli-test/Dockerfile
+++ b/php/php74-cli-test/Dockerfile
@@ -27,6 +27,7 @@ RUN set -x \
         php7.4-imap \
         php7.4-mysql \
         php-redis \
+        php-mongodb \
         php-pear \
         libreadline-dev \
         curl \
