--- a/php/php74-cli/Dockerfile
+++ b/php/php74-cli/Dockerfile
@@ -25,6 +25,7 @@ RUN set -x \
         php7.4-imap \
         php7.4-mysql \
         php-redis \
+        php-mongodb \
         php-pear \
         unzip \
     && apt -y dist-upgrade \
